implementando quadro informativo de regras
